# openGLTest

./: CMakeLists.txt  Camera.cpp  Camera.h  CameraMovment.cpp  CameraMovment.h  GameObject.cpp  GameObject.h  Graphics.cpp  Graphics.h  Model.cpp  Model.h  Object.h  OpenGLTest.vcxproj  OpenGLTest.vcxproj.filters  Shader.h  ShaderLoader.cpp  TimeKeeper.cpp  TimeKeeper.h  Types.h  UserInput.h  Window.cpp  Window.h  core.frag  core.vs  main.cpp
